--- a/content/cpp/1.language_grammar.md
+++ b/content/cpp/1.language_grammar.md
@@ -4,4 +4,829 @@ date = 2023-12-20T19:25:27+08:00
 draft = false
 +++
 
-c++关键字（含c++11） 基础内容
+#### 头文件
+
+* 尖括号，#include <...>：文件被认定为标准的或项目专属的头文件；编译器搜索时会先在某些默认磁盘目录寻找
+* 双引号，#include "..."：文件被认为是用户提供的头文件；编译器搜索时会由包含头文件的文件所在磁盘目录寻找
+
+---
+
+#### const
+
+* 作用：
+
+  1. 修饰变量，说明该变量不可以被改变；
+  2. 修饰指针，分为指向常量的指针和指针常量；
+  3. 常量引用，经常用于形参类型，即避免了拷贝，又避免了函数对值的修改；
+  4. 修饰成员函数，说明该成员函数内不能修改成员变量（是函数签名的一部分）。
+
+* `const`在类中的使用：
+
+  * 当成员函数的`const`和`non-const`版本**同时存在**，`const object`只会（只能）调用`const`版本，`non-const object`只会（只能）调用`non-const`版本
+
+  * 常量对象和常量成员函数：
+
+    |                                         | `const member function`（保证不改变 data member） | `non-const member function`（不保证不改变 data member） |
+    | --------------------------------------- | ------------------------------------------------- | ------------------------------------------------------- |
+    | `const object`（不能改变data member）   | 可以使用                                          | **不能使用**                                            |
+    | `non-const object`（data member可变动） | 可以使用                                          | 可以使用                                                |
+
+* 使用：
+
+```cpp
+// 类
+class A
+{
+private:
+    const int a;                // 常对象成员，只能在初始化列表赋值
+public:
+    // 构造函数
+    A() : a(0) { };
+    A(int x) : a(x) { };        // 初始化列表
+    // const可用于对重载函数的区分
+    int getValue();             // 普通成员函数
+    int getValue() const;       // 常成员函数，不得修改类中的任何数据成员的值，编译时const会被包含进函数签名
+};
+
+void function()
+{
+    // 对象
+    A b;                        // 普通对象，可以调用全部成员函数、更新常成员变量
+    const A a;                  // 常对象，只能调用常成员函数
+    const A *p = &a;            // 常指针
+    const A &q = a;             // 常引用
+    // 指针
+    char greeting[] = "Hello";
+    char* p1 = greeting;                // 指针变量，指向字符数组变量
+    const char* p2 = greeting;          // 指针变量，指向字符数组常量
+    char* const p3 = greeting;          // 常指针，指向字符数组变量
+    const char* const p4 = greeting;    // 常指针，指向字符数组常量
+}
+
+// 函数
+void function1(const int Var);           // 传递过来的参数在函数内不可变
+void function2(const char* Var);         // 参数指针所指内容为常量
+void function3(char* const Var);         // 参数指针为常指针
+void function4(const int& Var);          // 引用参数在函数内为常量
+
+// 函数返回值
+const int function5();      // 返回一个常数
+const int* function6();     // 返回一个指向常量的指针变量，使用：const int *p = function6();
+int* const function7();     // 返回一个指向变量的常指针，使用：int* const p = function7();
+
+// 函数后置const
+class ClassName{
+   public: 
+     int Fun() const;    //采用此种const 后置的形式是一种规定，亦为了不引起混淆。在此函数的								声明中和定义中均要使用const,因为const已经成为类型信息的一部分
+  						 //获得能力：可以操作常量对象
+   						 //失去能力：不能修改类的数据成员，不能在函数中调用其他不是const的函数
+     ... ... }
+```
+
+
+
+#### constexpr (C++11)
+
+1. 常量表达式函数
+
+   - 函数返回值在**编译时期**可确定，使用constexpr修饰函数返回值，使函数成为常量表达式函数；且满足：
+
+     a. 函数必须有返回值
+
+     b. 函数体只有单一的return语句
+
+     c. return语句中的表达式也必须是一个常量表达式
+
+     d. 函数在使用前必须已有定义
+
+     ```cpp
+     constexpr int f(){return 1;}
+     ```
+
+2. 常量表达式值
+
+   - 认定变量是一个常量表达式，那就把它声明为constexpr类型
+
+     ```cpp
+     constexpr int i=3;		//i是一个常变量
+     constexpr int j=i+1;	//i+1是一个常变量
+     constexpr int k=f(); 	//只有f()是一个constexpr函数时，k才是一个常量表达式
+     
+     // constexpr声明定义了一个指针, 仅对指针有效, 与指针所指对象无关
+     const int *p=nullptr;  		//p是一个指向整型常量的指针（pointer to const）
+     constexpr int *p1=nullptr;	//p1是一个常量指针(const pointer)
+     ```
+
+3. 常量表达式作用于函数模板
+
+   ```cpp
+   struct NotConstType {
+   	int i;
+   	NotConstType(int x) :i(x) {}
+   };
+   NotConstType myType;
+   
+   //constexpr作用于函数模板
+   template <typename T> constexpr T ConstExpFunc(T t) {
+   	return t;
+   }
+   
+   int main() {
+   	NotConstType objTmp = ConstExpFunc(myType);//编译通过，ConstExpFunc实例化为普通函数，constexpr被忽略
+   	constexpr NotConstType objTmp1 = ConstExpFunc(myType);//编译失败
+   	constexpr int a = ConstExpFunc(1);//编译通过，ConstExpFunc实例化为常量表达式函数
+   }
+   ```
+
+4. `constexpr`元编程
+
+   - 作用于递归函数来实现编译期的数值计算；C++11标准规定，常量表达式应至少支持512层递归。
+
+   ```cpp
+   constexpr int Fibonacci(int n) {
+   	return (n == 1) ? 1 : (n == 2 ? 1 : Fibonacci(n - 1) + Fibonacci(n - 2));
+   };
+   int main() {
+   	constexpr int fib8 = Fibonacci(8);	//编译期常量等于21
+   }
+   ```
+
+
+
+#### `constexpr` 与 `const` 的区别
+
+- `const`可修饰函数参数、函数返回值、函数本身、类等，描述的是“运行时常量性”，即在运行时数据具有不可更改性
+- `constexpr`可修饰函数参数、函数返回值、变量、类的构造函数、函数模板等，比`const`的约束更加严格，除具有“运行时常量性”，也具有“编译时常量性”，即编译期可知`constexpr`修饰的表达式的值
+
+```cpp
+const int getConst(){ return 1; }
+enum{ e1=getConst(),e2};				//编译出错
+
+//换成constexpr即可在编译期确定函数返回值用于初始化enum常量
+constexpr int getConst(){ return 1; }
+enum{ e1=getConst(),e2};				//编译OK
+```
+
+
+
+---
+
+#### mutable
+
+[C++ 关键字 mutable](https://blog.csdn.net/hellokandy/article/details/52317681)
+
+* 为了突破 `const` 的限制而设置的
+* 被 mutable 修饰的变量，将永远处于可变的状态，即使在一个 const 函数中，甚至结构体变量或者类对象为 const，其 mutable 成员也可以被修改
+* mutable 在类中只能够修饰非静态数据成员
+* mutable 数据成员的使用看上去像是骗术，因为它能够使 const 函数修改对象的数据成员。mutable 能够向用户隐藏实现细节，而无须使用不确定的东西
+* 如果类的成员函数不会改变对象的状态，那么这个成员函数一般会声明成 const 的。但是，有些时候需要在 const 的函数里面修改一些跟类状态无关的数据成员，那么这个数据成员就应该被mutalbe来修饰
+* `mutable`的意义：对mutable声明的变量所做的改变不会破坏`class object`的常量性，不能视为改变`class object`的状态
+
+```c++
+struct tagData {
+	int a;
+	mutable int b;
+};
+ 
+class clsData {
+public:
+	int a;
+	mutable int b;
+ 
+	void show() const {
+		a = 2;//错误，不能在const成员函数中修改普通变量
+		b = 5;//正确
+		printf("a: %d, b: %d\r\n");
+	}
+};
+ 
+int _tmain(int argc, _TCHAR* argv[]) {
+	//结构体变量为const，其mutable成员也可以被修改
+	const tagData dat = {0, 0};
+	dat.a = 8;//编译错误
+	dat.b = 9;//编译通过
+ 
+	//类对象为const，其mutable成员也可以被修改
+	clsData cls;
+	cls.show();
+	return 0;
+}
+```
+
+---
+
+#### restrict修饰符
+
+* C99标准引入
+* 用于限定和约束指针，并表明指针是访问一个数据对象的唯一且初始的方式
+* 它告诉编译器，所有修改该指针所指向内存中内容的操作都必须通过该指针来修改，而不能通过其它途径(其它变量或指针)来修改
+* 好处：帮助编译器进行更好的优化代码，生成更有效率的汇编代码
+
+```c++
+int *restrict ptr // ptr 指向的内存单元只能被 ptr 访问到，任何同样指向这个内存单元的其他指针都是未定义的(即无效指针/野指针)
+```
+
+---
+
+#### static
+
+作用：
+1. 修饰普通变量，修改变量的存储区域和生命周期，使变量存储在静态区，在 main 函数运行前就分配了空间，如果有初始值就用初始值初始化它，如果没有初始值系统用默认值初始化它。
+2. 修饰普通函数，表明函数的作用范围，仅在定义该函数的文件内才能使用。在多人开发项目时，为了防止与他人命名空间里的函数重名，可以将函数定位为 static。
+3. 修饰成员变量，修饰成员变量使所有的对象只保存一个该变量，而且不需要生成对象就可以访问该成员。表示唯一的、可共享的成员变量。
+4. 修饰成员函数，修饰成员函数使得不需要生成对象就可以访问该函数，但是在 static 函数内不能访问非静态成员。
+
+---
+
+#### 静态变量什么时候初始化
+
+1. 初始化只有一次，但可以多次赋值，在主程序之前，编译器已经为其分配好了内存
+2. 静态局部变量和全局变量一样，数据都存放在全局区域，所以在主程序之前，编译器已经为其分配好了内存
+   * 在C中，初始化发生在代码执行之前，编译阶段分配好内存，就会进行初始化，所以C语言无法使用变量对静态局部变量进行初始化，在程序运行结束，变量所处的全局内存会被全部回收。
+3. 而在C++中，初始化时在执行相关代码时才会进行初始化，全局变量、文件域的静态变量和类的静态成员变量在main执行之前的静态初始化过程中分配内存并初始化；局部静态变量（一般为函数内的静态变量）在第一次使用时（运行到声明处）分配内存并初始化。这里的变量包含内置数据类型和自定义类型的对象。
+
+---
+
+#### this指针
+1. `this` 指针是一个隐含于每一个非静态成员函数中的特殊指针。它指向调用该成员函数的那个对象。
+2. 当对一个对象调用成员函数时，编译程序先将对象的地址赋给 `this` 指针，然后调用成员函数，每次成员函数存取数据成员时，都隐式使用 `this` 指针。
+3. 一个成员函数被调用时，自动向它传递一个隐含的参数，该参数是一个指向这个成员函数所在的对象的指针。
+4. `this` 指针被隐含地声明为: `ClassName * const this`，这意味着不能给 `this` 指针赋值；在 `ClassName` 类的 `const` 成员函数中，`this` 指针的类型为：`const ClassName * const`，这说明不能对 `this` 指针所指向的这种对象是不可修改的（即不能对这种对象的数据成员进行赋值操作）；
+5. `this` 并不是一个常规变量，而是个**右值**，所以不能取得 `this` 的地址（不能 `&this`）
+6. 在以下场景中，经常需要显式引用 `this` 指针：
+    * 为实现对象的链式引用；
+    * 为避免对同一对象进行赋值操作；
+    * 在实现一些数据结构时，如 `list`。
+7. 个人理解：相当于Python中的`self`
+
+---
+
+#### 宏
+
+- 宏定义可以实现类似于函数的功能，但是它终归不是函数，而宏定义中括弧中的“参数”也不是真的参数，在宏展开的时候对 “参数” 进行的是一对一的替换。
+
+- 使用宏时要非常谨慎，尽量以**内联函数**、**枚举**和**常量**代替
+
+- `#`：对应变量字符串化  
+
+- `##`：把宏参数名与宏定义代码序列中的标识符连接在一起，形成一个新的标识符
+
+- 连接符`#@`：将单字符标记符变换为单字符，即加单引号
+
+  ```c++
+  #define B(x) #@x
+  // B(a)即'a'，B(1)即'1'
+  ```
+
+---
+
+#### `noexcept`
+
+1. 修饰符
+
+   ```cpp
+   voidFunc3() noexcept;
+   voidFunc4() noexcept(常量表达式);
+   ```
+
+   - `voidFunc3()`表示函数不会抛出异常，`noexcept`修饰的函数抛出了异常，编译器调用`std::terminate()`终止程序运行
+   - `voidFunc4()`常量表达式的结果为`true`，表示该函数不会抛出异常，反之（`false`）则有可能抛出异常
+
+2. 操作符（常用于模板）
+
+   ```cpp
+   template <typename T> void func5() noexcept(noexcept(T())) {}
+   ```
+
+   - `noexcept(T())` 是一个操作符，如果其参数是一个有可能抛出异常的表达式，`noexcept(T())` 则返回值为false，那么 func5 有可能会抛出异常；如果 `noexcept(T())` 返回 true，func5 不会抛出异常
+   - 函数模板是否会抛出异常，可由表达式进行推导，使得 C++11 更好支持泛型
+
+---
+
+#### 引用
+
+* 引用在语法上是值变量却拥有指针的语义
+* 所有按引用传递的参数必须加上 `const`
+  * 输入参数是值参或 `const` 引用， 输出参数为指针
+  * 输入参数可以是 `const` 指针， 但决不能是非 `const` 的引用参数，除非用于交换，如 `swap()`
+
+* 以下情况输入形参中用 `const T*` 指针
+  * 会传 null 指针
+  * 函数把指针或对地址的引用赋值给输入形参
+
+##### 左值与左值引用
+
+1. 左值`lvalue`：**永久对象**，可被取地址，可以出现在 `operator=` 左侧。如：有名称的变量、**函数形参**（栈中的对象）等。
+
+2. 函数**形参**都是**左值**，因为函数形参都有名称，都可以对形参进行取地址操作
+
+3. 左值引用：常规引用，一般表示对象的身份。通过在类型名后加 `&` 来表示。
+
+##### 右值与右值引用
+
+1. 右值`rvalue`：**临时对象（即将销毁）**，不可取地址，只能出现在 `operator=` 右侧（标准库中有例外，如string、complex 等）。典型的 `rvalue`：字面常量（如1、2…等）、匿名对象（临时对象）以及函数的返回值等。另外，也可以通过 `std::move` 显式地将一个左值转换为右值。
+2. 右值引用只能绑定到**临时对象的引用**
+3. 一个表达式的值要么是 lvalue，要么是 rvalue。
+4. **右值引用**和**左值引用**都是引用，都是一个变量（即都是一个左值），**右值引用**则通过在类型名后加 `&&` 表示。只不过左值引用引用的是左值，而右值引用只能引用右值。
+5. 在C++11之前为了能够将右值（或临时对象）作为引用参数传递给函数，C++标准故意设置了这一个特例：将函数参数声明为 `const Type &`即可（其中 **Type**为具体类型）。
+6. 不能将一个右值绑定到一个非常量左值引用上
+7. 只在定义**移动构造函数**与**移动赋值操作**时使用右值引用；不要使用 `std::forward`
+8. 右值引用可实现转移语义（Move Sementics）和精确传递（Perfect Forwarding），主要目的有：
+   - 消除两个对象交互时不必要的对象拷贝，节省运算存储资源，提高效率。
+   - 能够更简洁明确地定义泛型函数。
+
+
+##### 引用折叠/引用坍缩
+
+- `X& &`、`X& &&`、`X&& &` 可折叠成 `X&`
+- `X&& &&` 可折叠成 `X&&`
+
+##### 完美转发
+
+std::forward被称为**完美转发**，它的作用是保持原来的**值**属性不变
+
+* 如果原来的值是左值，经std::forward处理后该值还是左值
+* 如果原来的值是右值，经std::forward处理后它还是右值
+
+##### C++引用
+
+* 把引用作为参数：通过使用引用来替代指针，使 C++ 程序更容易阅读和维护。C++ 函数可返回一个引用，方式与返回一个指针类似。当函数返回一个引用时，则返回一个***指向返回值的隐式指针***。这样，函数就可以放在赋值语句的左边。[参考](https://www.runoob.com/cplusplus/passing-parameters-by-references.html)
+* 把引用作为返回值：从 C++ 函数中返回引用，就像返回其他数据类型一样。[参考](https://www.runoob.com/cplusplus/returning-values-by-reference.html)
+
+---
+
+#### 指针和引用的区别
+
+[参考链接](https://blog.csdn.net/weikangc/article/details/49762929)
+
+1. 引用必须被初始化，但不分配存储空间。指针不声明时初始化，在初始化时需分配存储空间。
+2. 引用初始化后不能被改变，指针能够改变所指的对象。
+3. **不存在指向空值的引用，但存在指向空值的指针**。
+
+#### 前/后置`++`
+
+##### i++
+
+1. 将i值取出放到寄存器
+2. 将寄存器中的值返回
+3. 寄存器中的值加1
+4. 使用寄存器值修改i的值
+
+##### ++i
+
+1. 将i值取出放到寄存器
+2. 寄存器中的值加1
+3. 将寄存器中的值返回并修改i的值
+
+##### 迭代器 `++it`
+
+* 前置返回一个引用，不会产生临时对象
+
+```c++
+int& operator++(){
+    *this += 1;
+	return *this;
+} 
+```
+
+##### 迭代器 `it++`
+
+* 后置返回一个对象，必须产生临时对象，临时对象会导致效率降低
+
+```c++
+int operator++(int){
+    int temp = *this;
+    ++*this;
+    return temp;                  
+} 
+```
+
+---
+
+
+#### 函数调用与返回
+
+* 当**调用**一个函数时，系统发生进行如下动作，内存模型如下图：
+
+  1. 开辟该调用函数的栈空间
+  2. 将当前的运行状态压栈（从右向左依次把被调函数所需要的参数压入栈）
+  3. 将返回地址压栈
+  4. 在栈内为传参分配空间
+  5. 在栈内为函数内局部变量分配空间，执行被调用函数
+
+  <img src=".\pics\cpp函数调用.jpg" style="zoom: 67%;" />
+
+* 当**返回**函数时，系统进行的动作刚好与函数调用时相反，内存模型如下图：
+
+  1. 释放栈内局部变量空间
+
+  2. 释放栈内传参空间
+  3. 退栈，得到返回地址，程序跳转调用处等待
+  4. 退栈，得到调用前运行状态，恢复调用前运行状态
+  5. 释放该调用函数栈空间
+
+  <img src=".\pics\cpp函数返回.jpg" style="zoom:67%;" />
+
+  * 局部变量在函数调用结束后就被销毁。栈是内存中的一部分空间，因此也是有限资源，如频繁调用函数而不返回已调用函数，栈就会被不断开辟，最终导致栈溢出（stack overflow），程序崩溃，所以在处理一些递归函数上需要特别注意结束条件
+
+* 函数调用约定：
+
+  * 传递参数，即参数**从右自左**压入堆栈，函数内部正好从左自右读出参数
+  * 函数执行清除堆栈，即调用函数是堆栈中压入参数时占用了位置，这些位置由调用函数负责清空
+
+---
+
+#### `__stdcall` 和 `__cdecl` 的区别
+
+* `__stdcall`：恢复函数自身的堆栈，只有在函数代码的结尾出现一次恢复堆栈的代码；编译时就规定了参数个数，无法实现不定个数的参数调用
+
+* `__cdecl`：恢复堆栈，假设有100个函数调用函数a，那么内存中就有100端恢复堆栈的代码；可以不定参数个数；每一个调用它的函数都包含清空堆栈的代码，所以产生的可执行文件大小会比调用`__stacall`函数大。支持可变参数，如`fprintf()`
+
+---
+
+#### inline 内联函数
+0. 必须将`inline`函数放在头文件
+1. inline 内联函数：**将函数体直接插入调用处**
+2. 特征：
+   * 相当于把内联函数里面的内容写在调用内联函数处；
+   * 相当于不用执行进入函数的步骤，直接执行函数体；
+   * 相当于宏，却比宏多了类型检查，真正具有函数特性；
+   * 编译器一般**不内联包含循环、递归、switch 等复杂操作的内联函数**；
+  * 在类声明中定义的函数，除了**虚函数**的其他函数都会自动隐式地当成内联函数。
+3. **使用**：
+```cpp
+// 声明1（加 inline，建议使用）
+inline int functionName(int first, int second,...);
+
+// 声明2（不加 inline）
+int functionName(int first, int second,...);
+
+// 定义
+inline int functionName(int first, int second,...) {/****/};
+
+// 类内定义，隐式内联
+class A {
+    int doA() { return 0; }         // 隐式内联
+}
+
+// 类外定义，需要显式内联
+class A {
+    int doA();
+}
+inline int A::doA() { return 0; }   // 需要显式内联
+```
+3. 编译器对 inline 函数的处理步骤：
+   - 将 inline 函数体复制到 inline 函数调用点处；
+   - 为所用 inline 函数中的**局部变量**分配内存空间；
+   - 将 inline 函数的的输入参数和返回值映射到调用方法的局部变量空间中；
+   - 如果 inline 函数有多个返回点，将其转变为 inline 函数代码块末尾的分支（使用 GOTO）。
+4. **优点**：
+   * 内联函数同**宏函数**一样将在被调用处进行代码展开，省去了**参数压栈、栈帧开辟与回收，结果返回等**，从而提高程序运行速度。
+   * 内联函数相比宏函数来说，在代码展开时，会做**安全检查或自动类型转换（同普通函数）**，而宏定义则不会。
+   * 在类中声明同时定义的成员函数，**自动转化为内联函数**，因此内联函数可以访问类的成员变量，宏定义则不能。
+   * 内联函数在运行时可调试，而宏定义不可以。
+5. **缺点**：
+   * 代码膨胀。内联是以代码膨胀（复制）为代价，消除函数调用带来的开销。如果执行函数体内代码的时间，相比于函数调用的开销较大，那么效率的收获会很少。另一方面，每一处内联函数的调用都要复制代码，将使程序的总代码量增大，消耗更多的内存空间。
+   * inline 函数无法随着函数库升级而升级。inline函数的改变需要重新编译，不像 non-inline 可以直接链接。
+   * 是否内联，程序员不可控。内联函数只是对编译器的建议，是否对函数内联，**决定权在于编译器**。
+
+---
+
+#### c++符号表解析/函数签名
+
+[c++符号表解析](https://blog.csdn.net/wdjjwb/article/details/86233389)
+
+* 函数签名：包含了一个函数的信息，包括函数名、它的参数类型、它所在的类和名称空间及其他信息
+* 函数签名用于识别不同的函数
+* 函数签名顺序：命名空间(如有) --> 类名(如有) --> 函数名
+
+---
+
+#### volatile
+
+- volatile 关键字是一种**类型修饰符**，用它声明的类型变量表示可以被某些编译器未知的因素（操作系统、硬件、其它线程等）更改。使用 volatile 告诉编译器不应对这样的对象进行优化。
+- volatile 关键字声明的变量，每次访问时都必须从**内存**中取出值（没有被 volatile 修饰的变量，可能由于编译器的优化，从 CPU 寄存器中取值）
+- const 可以是 volatile （如只读的状态寄存器）
+- 指针可以是 volatile
+
+---
+
+#### assert()
+
+- 断言，是宏，而非函数。
+- assert 宏的原型定义在`<assert.h>` (C)、`<cassert>`(C++)，其**作用是如果它的条件返回错误，则终止程序执行**
+- 可通过在定义 `#include <assert.h>`  之前 `NDEBUG` 来关闭 assert
+- 使用
+
+```cpp
+#define NDEBUG          // 加上这行，则 assert 不可用
+#include <assert.h>
+
+assert( p != NULL );    // assert 不可用
+```
+
+---
+
+#### sizeof()
+
+- 单目运算符，不是函数；sizeof 不能用来返回动态分配的内存空间的大小
+- sizeof 对数组，得到整个数组所占空间大小
+- sizeof 对指针，得到指针本身所占空间大小
+
+---
+
+#### strlen
+
+```c++
+size_t strlen(char const* str);
+```
+
+* 是一个函数，所以需要进行一次函数调用
+
+- 用来计算指定字符串 `str` 的长度，但不包括结束字符（即 null 字符）
+
+---
+
+#### strcpy、strncpy、strcat、strcmp
+
+* strcpy:复制字符串，a中字符串复制到b中，b中的字符串将被覆盖。
+
+* strcat:字符串的连接，没有覆盖现象
+
+* strncpy:复制字符串的前n个字符，如果是复制所有的字符会包含'\0'，但是中间的话就没有，要自己添加，例如:
+
+  ```c++
+  strncpy(b,a,i-1);
+  b[i-1]='\0';
+  ```
+
+* strcmp：对两个字符串进行比较，然后返回比较结果，函数形式如下：
+  int strcmp(constchar*str1,constchar*str2);
+  其中str1和str2可以是字符串常量或者字符串变量，返回值为整形。返回结果如下规定：
+  ①str1小于str2，返回负值或者-1（VC返回-1）；
+  ②str1等于str2，返回0；
+  ③str1大于str2，返回正值或者1（VC返回1）；
+  strcmp函数实际上是对字符的ASCII码进行比较，实现原理如下：首先比较两个串的第一个字符，若不相等，则停止比较并得出两个ASCII码大小比较的结果；如果相等就接着比较第二个字符然后第三个字符等等。无论两个字符串是什么样，strcmp函数最多比较到其中一个字符串遇到结束符'/0'为止，就能得出结果。
+
+---
+
+#### 手动实现`string`类
+
+```c++
+class my_string {
+	friend std::ostream& operator <<(ostream& os, const my_string& str);
+	friend std::istream& operator >>(istream& is, my_string& str);
+public:
+	my_string(const char * str = NULL);
+	my_string(const my_string &);
+	~my_string();
+	my_string operator=(const my_string &);
+	my_string operator+(const my_string &);
+	bool operator==(const my_string&);
+	char& operator[](int);
+	int size() { return strlen(this->data) + 1; }
+private:
+	char* data;
+};
+ 
+my_string::my_string(const char* str){
+	if (str == NULL)this->data = NULL;
+	else{
+		this->data = new char[strlen(str) + 1];
+		strcpy(data,str);
+	}
+};
+ 
+my_string::my_string(const my_string& other){
+	if (other.data == NULL) this->data = NULL;
+	else{
+		this->data = new char[strlen(other.data)+1];
+		strcpy(this->data,other.data);
+	}
+};
+ 
+my_string::~my_string(){
+	delete[] this->data;
+};
+ 
+my_string my_string::operator=(const my_string& other){
+	delete[] this->data;
+	if (other.data == NULL)this->data = NULL;
+	else{
+		this->data = new char[strlen(other.data)+1];
+		strcpy(this->data,other.data);
+	}
+	return *this;
+};
+ 
+my_string my_string::operator+(const my_string& other){
+	if (other.data == NULL)return *this;
+	else if(this->data == NULL){
+		this->data = new char[strlen(other.data) + 1];
+		strcpy(this->data, other.data);
+		return *this;
+	} else {
+		my_string strTmp;
+		strTmp.data = new char[strlen(this->data) + strlen(other.data) + 1];
+		strcpy(strTmp.data, this->data);
+		strcat(strTmp.data, other.data);
+		return strTmp;
+	}
+};
+ 
+bool my_string::operator==(const my_string& other){
+	int tmp = 0;
+	tmp = strcmp(this->data,other.data);
+	if (tmp == 0)return 1;
+	else return 0;
+};
+ 
+char& my_string::operator[](int index){
+	return this->data[index];
+};
+ 
+ostream& operator<<(ostream& os, const my_string& str){
+	os << str.data;
+	return os;
+};
+ 
+istream& operator>>(istream& is, my_string& str){
+	char buffer[4096];
+	is >> buffer;
+	str.data = buffer;
+	return is;
+};
+ 
+int main(){
+	my_vector<int> mv1(3);
+	mv1[0] = 0;
+	mv1[1] = 1;
+	mv1[2] = 2;
+ 
+	my_vector<int> mv2(mv1);
+	cout << mv2[0] << mv2[1] << mv2[2] << endl;
+ 
+	my_string str1, str2,str3;
+	str1 = "qweewq";
+	str2 = "qweewq";
+	str3 = str1 + str2;
+	cout << str3 << endl;
+	if (str1 == str2)cout << "str1 和 str2 相同 " << endl;
+	cout << str1[1] << str1.size() << endl;
+	return 0;
+}
+```
+
+---
+
+#### 重载运算符
+
+1. 只能重载已有的运算符，而无权发明新的运算符；对于一个重载的运算符，其优先级和结合律与内置类型一致才可以；不能改变运算符操作数个数
+2. `.`  `::`  `？` `:`  `sizeof`  `typeid`  `**` 不能重载
+3. 两种重载方式，成员运算符和非成员运算符，成员运算符比非成员运算符少一个参数；下标运算符、箭头运算符必须是成员运算符；
+4. 引入运算符重载，是为了实现类的多态性
+5. 当重载的运算符是成员函数时，this绑定到左侧运算符对象。成员运算符函数的参数数量比运算符对象的数量少一个；至少含有一个类类型的参数
+6. 从参数的个数推断到底定义的是哪种运算符，当运算符既是一元运算符又是二元运算符（`+`，`-`，`*`，`&`）
+7. 下标运算符必须是成员函数，下标运算符通常以所访问元素的引用作为返回值，同时最好定义下标运算符的常量版本和非常量版本；箭头运算符必须是类的成员，解引用通常也是类的成员；重载的箭头运算符必须返回类的指针
+
+---
+
+#### using
+
+##### using 声明
+
+一条 `using 声明` 语句**一次只引入命名空间的一个成员**。它使得我们可以清楚知道程序中所引用的到底是哪个名字。如：
+
+```cpp
+using namespace_name::name;
+```
+
+##### 构造函数的 using 声明
+
+在 C++11 中，派生类能够重用其直接基类定义的构造函数
+
+```cpp
+class Derived : Base {
+public:
+    using Base::Base;
+    /* ... */
+};
+```
+
+如上 using 声明，对于基类的每个构造函数，编译器都生成一个与之对应（形参列表完全相同）的派生类构造函数。生成如下类型构造函数：
+
+```cpp
+Derived(parms) : Base(args) { }
+```
+
+##### using 指示
+
+`using 指示` 使得某个特定命名空间中所有名字都可见，这样我们就无需再为它们添加任何前缀限定符了。如：
+
+```cpp
+using namespace_name name;
+```
+
+##### using 使用注意事项
+
+- 少使用 `using 指示`：一般说来，使用 using 命令比使用 using 编译命令更安全，这是由于它**只导入了指定的名称**。如果该名称与局部名称发生冲突，编译器将**发出指示**。using编译命令导入所有的名称，包括可能并不需要的名称。如果与局部名称发生冲突，则**局部名称将覆盖名称空间版本**，而编译器**并不会发出警告**。另外，名称空间的开放性意味着名称空间的名称可能分散在多个地方，这使得难以准确知道添加了哪些名称。
+
+```cpp
+using namespace std;
+```
+
+- 多使用 `using 声明`
+
+```cpp
+int x;
+std::cin >> x ;
+std::cout << x << std::endl;
+// 或者
+using std::cin;
+using std::cout;
+using std::endl;
+int x;
+cin >> x;
+cout << x << endl;
+```
+
+---
+
+#### `:: ` 范围解析运算符
+
+1. 全局作用域符（`::name`）：用于类型名称（类、类成员、成员函数、变量等）前，表示作用域为全局命名空间
+2. 类作用域符（`class::name`）：用于表示指定类型的作用域范围是具体某个类的
+3. 命名空间作用域符（`namespace::name`）:用于表示指定类型的作用域范围是具体某个命名空间的
+4. :: 使用
+
+```cpp
+int count = 11;         // 全局（::）的 count
+
+class A {
+public:
+	static int count;   // 类 A 的 count（A::count）
+};
+int A::count = 21;
+
+void fun() {
+	int count = 31;     // 初始化局部的 count 为 31
+	count = 32;         // 设置局部的 count 的值为 32
+}
+
+int main() {
+	::count = 12;       // 测试 1：设置全局的 count 的值为 12
+	A::count = 22;      // 测试 2：设置类 A 的 count 为 22
+	fun();		        // 测试 3
+	return 0;
+}
+```
+
+---
+
+#### enum 枚举类型
+
+##### 限定作用域的枚举类型
+
+```cpp
+enum class open_modes { input, output, append };
+```
+
+##### 不限定作用域的枚举类型
+
+```cpp
+enum color { red, yellow, green };
+enum { floatPrec = 6, doublePrec = 10 };
+```
+
+---
+
+#### decltype
+
+* 从表达式的类型推断出要定义的变量类型，但是不想用该表达式的值初始化变量（初始化可以用`auto`）。为了满足这一需求，C++11新标准引入了`decltype`类型说明符，它的作用是**选择并返回操作数的数据类型**，在此过程中，编译器分析表达式并得到它的类型，却不实际计算表达式的值
+* decltype 关键字用于检查实体的声明类型或表达式的类型及值分类。语法：
+
+```cpp
+decltype ( expression )
+```
+
+- decltype 使用
+
+```cpp
+// 尾置返回允许我们在参数列表之后声明返回类型
+template <typename It>
+auto fcn(It beg, It end) -> decltype(*beg)
+{
+    // 处理序列
+    return *beg;    // 返回序列中一个元素的引用
+}
+// 为了使用模板参数成员，必须用 typename
+template <typename It>
+auto fcn2(It beg, It end) -> typename remove_reference<decltype(*beg)>::type
+{
+    // 处理序列
+    return *beg;    // 返回序列中一个元素的拷贝
+}
+```
+
+---
+
