--- a/content/cpp/3.memory.md
+++ b/content/cpp/3.memory.md
@@ -4,4 +4,534 @@ date = 2023-12-20T19:23:48+08:00
 draft = false
 +++
 
-c++ 内存相关
+#### 内存对齐
+
+1. 分配内存的顺序是按照声明的顺序
+2. 每个变量相对于起始位置的偏移量必须是该变量类型大小的整数倍，不是整数倍空出内存，直到偏移量是整数倍为止
+3. 整个结构体的大小必须是里面变量类型最大值的整数倍
+
+#### 为什么内存对齐
+
+1. 平台原因(移植原因)
+
+   - 不是所有的硬件平台都能访问任意地址上的任意数据的
+   - 某些硬件平台只能在某些地址处取某些特定类型的数据，否则抛出硬件异常
+
+2. 性能原因
+   - 数据结构(尤其是栈)应该尽可能地在自然边界上对齐
+   - 为了访问未对齐的内存，处理器需要作两次内存访问；而对齐的内存访问仅需要一次访问
+
+#### 结构体成员偏移量
+
+- [c - How to understand "((size_t) &((TYPE *)0)->MEMBER)"? - Stack Overflow](https://stackoverflow.com/questions/18554721/how-to-understand-size-t-type-0-member)
+- 实现
+
+```cpp
+struct node_t {
+    char a;
+    int b;
+    int c;
+};
+struct node_t node;
+// 方法1
+(unsigned long)(&(node.c)) - (unsigned long)(&(node))
+// 方法2
+#define OFFSET_OF(type, member) (unsigned long)(&(((type *)0)->member))
+```
+
+
+---
+
+#### #pragma pack(n)
+
+- 设定结构体、联合以及类成员变量以 n 字节方式对齐
+- 使用
+
+```cpp
+#pragma pack(push)  // 保存对齐状态
+#pragma pack(4)     // 设定为 4 字节对齐
+struct test
+{
+    char m1;
+    double m4;
+    int m3;
+};
+#pragma pack(pop)   // 恢复对齐状态
+```
+
+---
+
+#### 位域
+
+```cpp
+Bit mode: 2;    // mode 占 2 位
+```
+
+类可以将其（非静态）数据成员定义为位域（bit-field），在一个位域中含有一定数量的二进制位。当一个程序需要向其他程序或硬件设备传递二进制数据时，通常会用到位域。
+
+- 位域在内存中的布局是与机器有关的
+- 位域的类型必须是**整型**或**枚举类型**，带符号类型中的位域的行为将因具体实现而定
+- 取地址运算符（&）不能作用于位域，任何指针都无法指向类的位域
+
+---
+
+#### extern 和 extern "C"
+
+[参考资料](https://blog.csdn.net/nyist_zxp/article/details/80253852)
+
+- extern 表示变量或者函数的定义在别的文件中。提示编译器遇到此变量或函数时，在其它模块中寻找其定义，另外，extern也可用来进行链接指定
+- 被 extern 限定的函数或变量是 extern 类型的
+- 被 `extern "C"` 修饰的变量和函数是按照 C 语言方式编译和链接的
+- 作用：让 C++ 编译器将 `extern "C"` 声明的代码当作 C 语言代码处理，避免因符号修饰导致不能和C语言库的符号链接的问题
+- 使用
+
+```cpp
+#ifdef __cplusplus
+extern "C" {
+#endif
+
+void *memset(void *, int, size_t);
+
+#ifdef __cplusplus
+}
+#endif
+```
+
+---
+
+#### struct 和 typedef struct
+
+##### C 中
+
+```cpp
+// c
+typedef struct Student {
+    int age; 
+} S;
+```
+
+等价于
+
+```cpp
+// c
+struct Student { 
+    int age; 
+};
+
+typedef struct Student S;
+```
+
+此时 `S` 等价于 `struct Student`，但两个标识符名称空间不相同。
+
+另外还可以定义与 `struct Student` 不冲突的 `void Student() {}`。
+
+##### C++ 中
+
+由于编译器定位符号的规则（搜索规则）改变，导致不同于C语言。
+
+一、如果在类标识符空间定义了 `struct Student {...};`，使用 `Student me;` 时，编译器将搜索全局标识符表，`Student` 未找到，则在类标识符内搜索。
+
+即表现为可以使用 `Student` 也可以使用 `struct Student`，如下：
+
+```cpp
+// cpp
+struct Student { 
+    int age; 
+};
+
+void f( Student me );       // 正确，"struct" 关键字可省略
+```
+
+二、若定义了与 `Student` 同名函数之后，则 `Student` 只代表函数，不代表结构体，如下：
+
+```cpp
+typedef struct Student { 
+    int age; 
+} S;
+
+void Student() {}           // 正确，定义后 "Student" 只代表此函数
+
+//void S() {}               // 错误，符号 "S" 已经被定义为一个 "struct Student" 的别名
+
+int main() {
+    Student(); 
+    struct Student me;      // 或者 "S me";
+    return 0;
+}
+```
+
+---
+
+#### C++ 中 struct 和 class
+
+总的来说，struct 更适合看成是一个数据结构的实现体，class 更适合看成是一个对象的实现体。
+
+##### struct 和 class的区别
+
+- 最本质的区别就是**默认的访问控制**
+  1. 默认的继承访问权限。struct 是 public ，class 是 private 
+  2. struct 作为数据结构的实现体，默认的数据访问控制是 public
+  3. class 作为对象的实现体，默认的成员变量访问控制是 private
+
+---
+
+#### union 联合
+
+联合（union）是一种**节省空间的特殊的类**，一个 union 可以有多个数据成员，但是在任意时刻只有一个数据成员可以有值。当某个成员被赋值后其他成员变为未定义状态。联合有如下特点：
+
+- 默认访问控制符为 public
+- 可以含有构造函数、析构函数
+- 不能含有引用类型的成员
+- 不能继承自其他类，不能作为基类
+- 不能含有虚函数
+- 匿名 union 在定义所在作用域可直接访问 union 成员
+- 匿名 union 不能包含 protected 成员或 private 成员
+- 全局匿名联合必须是静态（static）的
+- 使用：
+
+```cpp
+#include<iostream>
+
+union UnionTest {
+    UnionTest() : i(10) {};
+    int i;
+    double d;
+};
+
+static union {
+    int i;
+    double d;
+};
+
+int main() {
+    UnionTest u;
+    union {
+        int i;
+        double d;
+    };
+
+    std::cout << u.i << std::endl;  // 输出 UnionTest 联合的 10
+
+    ::i = 20;
+    std::cout << ::i << std::endl;  // 输出全局静态匿名联合的 20
+
+    i = 30;
+    std::cout << i << std::endl;    // 输出局部匿名联合的 30
+    return 0;
+}
+```
+
+---
+
+#### POD ( Plain Old Data ) 数据结构
+
+1. 特征：
+   - 不能写构造/析构函数、拷贝/移动构造函数、拷贝/移动运算符，而是用编译器自动生成的
+   - **布局有序**：
+     - 所有非静态成员有相同的访问权限，比如都是private的，或者都是public，或者都是protected
+     - 继承树中最多只能有一个类有非静态数据成员（在类或结构体的继承时，满足以下两种情况之一：① 派生类中有非静态成员，且只有仅包含静态成员的基类 ② 基类有非静态成员，而派生类没有非静态成员）
+     - 类中第一个非静态成员的类型与其基类不同
+     - 没有虚函数和虚基类
+     - 所有非静态成员都符合标准布局类型，其父类也符合标准布局
+2. 可直接使用`memcpy`等函数
+3. C++判断：`is_pod<T>::value `
+
+---
+
+#### 内存分配和管理
+
+##### C++内存模型
+
+* [超详细资料](https://www.cnblogs.com/alexcool/articles/9241548.html)
+
+| 分配                     | 释放                       | 类型      | 是否重新定义             |
+| ------------------------ | -------------------------- | --------- | ------------------------ |
+| malloc()                 | free()                     | C函数     | 不可                     |
+| new                      | delete                     | C++表达式 | 不可                     |
+| ::operator new()         | ::operator delete()        | C++函数   | 可以，重载               |
+| allocator<T>::allocate() | allocator<T>::deallocate() | C++标准库 | 可自由设计并搭配任何容器 |
+
+##### malloc、calloc、realloc、alloca
+
+1. malloc：申请指定字节数的内存。申请到的内存中的初始值不确定。
+
+   * 原理：
+
+     i. 空闲链表：将可用的内存块连接为一个长长的列表
+
+     ii. 调用malloc函数时，沿链表寻找一个大到足以满足用户请求所需要的内存块
+
+     iii. 将该内存块一分为二（一块的大小与用户请求的大小相等，另一块的大小就是剩下的字节）
+
+     iv. 将分配给用户的那块内存传给用户，并将剩下的那块（如果有的话）返回到连接表上
+
+     v. 调用free函数时，它将用户释放的内存块连接到空闲链上
+
+     vi. 如果空闲链会被切成很多的小内存片段，空闲链上可能不能满足用户要求的片段。则malloc函数请求延时，并开始在空闲链上检查各内存片段并整理，将相邻的小空闲块合并成较大的内存块。
+
+     vii. 如果还无法获得符合要求的内存块，malloc函数会返回NULL指针，因此在调用malloc动态申请内存块时，一定要判断返回值
+
+2. calloc：为指定长度的对象，分配能容纳其指定个数的内存。申请到的内存的每一位（bit）都初始化为 0。
+
+3. realloc：更改以前分配的内存长度（增加或减少）。当增加长度时，可能需将以前分配区的内容移到另一个足够大的区域，而新增区域内的初始值则不确定。
+
+4. alloca：在**栈**上申请内存。程序在出栈的时候，会自动释放内存。但是需要注意的是，alloca 不具可移植性, 而且在没有传统堆栈的机器上很难实现。alloca 不宜使用在必须广泛移植的程序中。C99 中支持变长数组 (VLA)，可以用来替代 alloca。（Google风格不允许使用）
+
+##### malloc、free
+
+用于分配、释放内存
+
+malloc、free 使用
+
+申请内存，确认是否申请成功
+
+```cpp
+char *str = (char*) malloc(100);
+assert(str != nullptr);
+```
+
+释放内存后指针置空
+
+```cpp
+free(p); 
+p = nullptr;
+```
+
+##### new、delete
+
+1. new / new[]：完成两件事，先底层调用 malloc 分配了内存，然后调用构造函数（创建对象）。
+2. delete/delete[]：也完成两件事，先调用析构函数（清理资源），然后底层调用 free 释放空间。
+3. new 在申请内存时会自动计算所需字节数，而 malloc 则需我们自己输入申请内存空间的字节数。
+4. new 必须和 delete 配合使用
+5. new 申请的内存在**堆**中，不会随着函数结束而消失
+6. new 先通过`malloc`分配内存，再调用构造函数；delete 先调用析构函数，再通过`free`释放内存
+
+new、delete 使用
+
+申请内存，确认是否申请成功
+
+```cpp
+int main()
+{
+    T* t = new T();     // 先内存分配 ，再构造函数
+    delete t;           // 先析构函数，再内存释放
+    return 0;
+}
+```
+
+* new**表达式**内部细节:
+
+  ```c++
+  Complex* pc = new Complex(1,2); // new expression（new表达式）
+  ```
+
+  编译器转换为：
+
+  ```c++
+  Complex* pc;
+  try {
+  	void mem = operator new( sizeof(Complex) ); // 全局函数或者重载的函数；分配内存，内部调用malloc
+      pc = static_cast<Complex*>(mem);
+      pc->Complex::Complex(1,2); // 编译器调用构造函数，GCC中只有编译器才能这样调用
+      new(pc)Complex::Complex(1,2); // 或采用定位new直接，等于直接调用构造函数
+  } 
+  catch (std::bad_alloc){
+  	...
+  }
+  ```
+
+* delete**表达式**内部细节:
+
+  ```c++
+  delete pc; // delete expression
+  ```
+
+  编译器转换为：
+
+  ```c++
+  pc->~Complex(); // 析构函数
+  operator delete(pc); // 全局函数或者重载的函数；清理内存，内部调用free
+  ```
+
+* new/delete 内存分配途径
+
+  ![](pics\C++内存管理.png)
+
+##### 定位 new（placement new）
+
+定位 new（placement new）在用户**指定的已经分配的内存**上构建对象，这个过程不会申请新的内存，只会调用对象的构造函数；同时允许向 new 传递**额外的地址参数**，从而在预先指定的内存区域创建对象。
+
+```cpp
+new (place_address) type
+new (place_address) type (initializers)
+new (place_address) type [size]
+new (place_address) type [size] { braced initializer list }
+```
+
+- `place_address` 是个指针
+
+- `initializers` 提供一个（可能为空的）以逗号分隔的初始值列表
+
+- SGI STL 3.0版本的里面的源代码：
+
+  ```c++
+  // vector已经2个元素，而实际内存是4个的
+  // 再向vector中push一个元素，因为vector还有2个未用的空间，所以不需要申请内存
+  // 只需要在原来已经分配好的内存中调用元素的构造函数
+  template <class T1, class T2>
+  inline void construct(T1* p, const T2& value) {
+      new (p) T1(value);
+  }
+  
+  // vector push_back函数
+  void push_back(const T& x) {
+      if (finish != end_of_storage) {
+        construct(finish, x);         
+        ++finish;                             
+      }
+      else                               
+        insert_aux(end(), x);         
+  }
+  ```
+
+- placement delete：如果一个带额外参数的operator new（即placement new）没有“带相同参数”的对应版operator delete，那么就当new的内存分配动作出现异常时就没有任何operator delete被调用，于是产生内存泄露。
+
+##### 重载 operator new / delete
+
+* new/delete运算符重载的一些规则
+
+  * new和delete运算符重载必须成对出现
+  * new运算符的第一个参数必须是`size_t`类型，delete运算符的第一个参数则必须是要销毁释放的内存对象
+  * 系统默认实现了`new/delete`、`new[]/delete[]`、`placement new/delete` 6个运算符函数
+  * 当delete运算符的参数 ≥ 2时，需要自己调用析构函数，并且以运算符函数的形式来调用delete运算符
+
+* 代码：
+
+  ```c++
+  class A {
+    public；
+      A(){}
+      void * operator new(size_t size);
+      void * operator new[](size_t size);
+      void * operator new(size_t size, void *p);  // placement new
+      void * operator new(size_t size, int a, int b);
+      
+      void operator delete(void *p);
+      void operator delete[](void *p);
+      void operator delete(void *p, void *p1);  // placement delete，只有placement new不能完整执行时调用
+      void operator delete(void *p, int a, int b);
+  };
+  
+  class B {
+    public:
+      B(){}
+  }
+  
+  //全局运算符函数，请谨慎重写覆盖全局运算符函数。
+  void * operator new(size_t size);
+  void * operator new[](size_t size);
+  void * operator new(size_t size, void *p) noexcept;
+  void * operator new(size_t size, int a, int b);
+  
+  void operator delete(void *p);
+  void operator delete[](void *p);
+  void operator delete(void *p, void *p1);
+  void operator delete(void *p, int a, int b);
+  
+  int main(){
+    char buf[100];
+  
+    A *a1 = new CA();   //调用void * A::operator new(size_t size)
+    A *a2 = new CA[10];  //调用void * A::operator new[](size_t size)
+    A *a3 = new(buf)CA();  //调用void * A::operator new(size_t size, void *p)
+    A *a4 = new(10, 20)CA();  //调用void* A::operator new(size_t size, int a, int b)
+    
+    delete a1;  //调用void A::operator delete(void *p)
+    delete[] a2;  //调用void A::operator delete[](void *p)
+    a3->~CA();  //a3用的是placement new的方式分配，因此需要自己调用对象的析构函数。
+    A::operator delete(a3, buf);  //调用void CA::operator delete(void *p, void *p1)，要带上类命名空间
+    a4->~CA();  //a4的运算符参数大于等于2个，所以需要自己调用对象的析构函数
+    A::operator delete(a4, 10, 20); //调用void CA::operator delete(void *p, int a, int b)
+  
+    //B类没有重载运算符，因此使用的是全局重载的运算符。
+    B *b1 = new B();  //调用void * operator new(size_t size)
+    B *b2 = new B[10]; //调用void * operator new[](size_t size)
+    //这里你可以看到同一块内存可以用来构建CA类的对象也可以用来构建CB类的对象
+    B *b3 = new(buf)B();  //调用void * operator new(size_t size, void *p)
+    B *b4 = new(10, 20)CB(); //调用void* operator new(size_t size, int a, int b)
+  
+    delete b1;  //调用void operator delete(void *p)
+    delete[] b2;   //调用void operator delete[](void *p)
+    //b3用的是placement new的方式分配，因此需要自己调用对象的析构函数。
+    b3->~B();
+    ::operator delete(b3, buf);  //调用void operator delete(void *p, void *p1)
+    //b4的运算符参数大于等于2个所以需要自己调用对象的析构函数。
+    b4->~B();
+    ::operator delete(b4, 10, 20);  //调用void operator delete(void *p, int a, int b)
+   
+   return 0;
+  }
+  ```
+
+
+---
+
+#### delete this 合法吗？
+
+> [Is it legal (and moral) for a member function to say delete this?](https://isocpp.org/wiki/faq/freestore-mgmt#delete-this)
+
+合法，但：
+
+1. 必须保证 this 对象是通过 `new`（不是 `new[]`、不是 placement new、不是栈上、不是全局、不是其他对象成员）分配的
+2. 必须保证调用 `delete this` 的成员函数是最后一个调用 this 的成员函数
+3. 必须保证成员函数的 `delete this `后面没有调用 this 了
+4. 必须保证 `delete this` 后没有人使用了
+
+---
+
+#### 如何定义一个只能在堆上（栈上）生成对象的类？
+
+> [如何定义一个只能在堆上（栈上）生成对象的类?](https://www.nowcoder.com/questionTerminal/0a584aa13f804f3ea72b442a065a7618)
+
+##### 只能在堆上
+
+方法：将析构函数设置为私有
+
+原因：C++ 是静态绑定语言，编译器管理栈上对象的生命周期，编译器在为类对象分配栈空间时，会先检查类的析构函数的访问性。若析构函数不可访问，则不能在栈上创建对象。
+
+##### 只能在栈上
+
+方法：将 new 和 delete 重载为私有
+
+原因：在堆上生成对象，使用 new 关键词操作，其过程分为两阶段：第一阶段，使用 new 在堆上寻找可用内存，分配给对象；第二阶段，调用构造函数生成对象。将 new 操作设置为私有，那么第一阶段就无法完成，就不能够在堆上生成对象。
+
+---
+
+#### 函数指针
+
+##### 定义
+
+- 函数指针指向的是特殊的数据类型，函数的类型是由其返回的数据类型和其参数列表共同决定的，而函数的名称则不是其类型的一部分
+- 一个具体函数的名字，如果后面不跟调用符号(即括号)，则该名字就是该函数的指针(注：大部分情况下正确，但并不严格)
+
+##### 声明方法
+
+```c++
+int (*pf)(const int&, const int&);
+```
+
+上面的pf就是一个函数指针，指向所有返回类型为int，并带有两个const int&参数的函数。注意*pf两边的括号是必须的，否则上面的定义就变成了：
+
+```c++
+int *pf(const int&, const int&);
+```
+
+而这声明了一个函数pf，其返回类型为int *， 带有两个const int&参数。
+
+##### 为什么有函数指针
+
+- 函数与数据项相似，函数也有地址。在同一个函数中通过使用相同的形参在不同的时间使用产生不同的效果。
+- 一个函数名就是一个指针，它指向函数的代码。一个函数地址是该函数的进入点，也就是调用函数的地址。函数的调用可以通过函数名，也可以通过指向函数的指针来调用。函数指针还允许将函数作为变元传递给其他函数；
+- 两种方法赋值： 指针名 = 函数名；  指针名 = &函数名
+
+---
