--- a/content/cpp/8.tools.md
+++ b/content/cpp/8.tools.md
@@ -12,7 +12,21 @@ draft = false
 
 ---
 
+#### CMake
+
+---
+
+#### XMake
+
+---
+
+#### bazel
+
+---
+
 #### GDB
 
 * 《[debuging with gdb](./Debugging.with.gdb.中文版.pdf)》（中文版）
 * `GNU`官网关于 `GCC`和 `GDB`的文档
+
+---
