--- a/content/cpp/2.oop.md
+++ b/content/cpp/2.oop.md
@@ -126,6 +126,20 @@ C 实现 C++ 的面向对象特性（封装、继承、多态）
 
 ---
 
+#### this指针
+1. `this` 指针是一个隐含于每一个非静态成员函数中的特殊指针。它指向调用该成员函数的那个对象。
+2. 当对一个对象调用成员函数时，编译程序先将对象的地址赋给 `this` 指针，然后调用成员函数，每次成员函数存取数据成员时，都隐式使用 `this` 指针。
+3. 一个成员函数被调用时，自动向它传递一个隐含的参数，该参数是一个指向这个成员函数所在的对象的指针。
+4. `this` 指针被隐含地声明为: `ClassName * const this`，这意味着不能给 `this` 指针赋值；在 `ClassName` 类的 `const` 成员函数中，`this` 指针的类型为：`const ClassName * const`，这说明不能对 `this` 指针所指向的这种对象是不可修改的（即不能对这种对象的数据成员进行赋值操作）；
+5. `this` 并不是一个常规变量，而是个**右值**，所以不能取得 `this` 的地址（不能 `&this`）
+6. 在以下场景中，经常需要显式引用 `this` 指针：
+    * 为实现对象的链式引用；
+    * 为避免对同一对象进行赋值操作；
+    * 在实现一些数据结构时，如 `list`。
+7. 个人理解：用法上相当于Python中的`self`
+
+---
+
 #### explicit（显式）关键字
 
 - 可以阻止不应该允许的经过[转换构造函数](https://baike.baidu.com/item/转换构造函数/8944422)进行的隐式转换的发生。声明为explicit的[构造函数](https://baike.baidu.com/item/构造函数/7478717)不能在隐式转换中使用
