--- a/content/cpp/1.language_grammar.md
+++ b/content/cpp/1.language_grammar.md
@@ -29,10 +29,10 @@ draft = false
 
   * 常量对象和常量成员函数：
 
-    |                                         | `const member function`（保证不改变 data member） | `non-const member function`（不保证不改变 data member） |
+    |                                         | `const member function` 保证不改变 data member | `non-const member function` 可能会改变 data member |
     | --------------------------------------- | ------------------------------------------------- | ------------------------------------------------------- |
-    | `const object`（不能改变data member）   | 可以使用                                          | **不能使用**                                            |
-    | `non-const object`（data member可变动） | 可以使用                                          | 可以使用                                                |
+    | `const object` 不能改变data member   | 可以使用                                          | **不能使用**                                            |
+    | `non-const object` data member可变动 | 可以使用                                          | 可以使用                                                |
 
 * 使用：
 
