--- a/content/cpp/3.memory.md
+++ b/content/cpp/3.memory.md
@@ -21,27 +21,6 @@ draft = false
    - 数据结构(尤其是栈)应该尽可能地在自然边界上对齐
    - 为了访问未对齐的内存，处理器需要作两次内存访问；而对齐的内存访问仅需要一次访问
 
-#### 结构体成员偏移量
-
-- [c - How to understand "((size_t) &((TYPE *)0)->MEMBER)"? - Stack Overflow](https://stackoverflow.com/questions/18554721/how-to-understand-size-t-type-0-member)
-- 实现
-
-```cpp
-struct node_t {
-    char a;
-    int b;
-    int c;
-};
-struct node_t node;
-// 方法1
-(unsigned long)(&(node.c)) - (unsigned long)(&(node))
-// 方法2
-#define OFFSET_OF(type, member) (unsigned long)(&(((type *)0)->member))
-```
-
-
----
-
 #### #pragma pack(n)
 
 - 设定结构体、联合以及类成员变量以 n 字节方式对齐
@@ -61,6 +40,26 @@ struct test
 
 ---
 
+#### 结构体成员偏移量
+
+- [c - How to understand "((size_t) &((TYPE *)0)->MEMBER)"? - Stack Overflow](https://stackoverflow.com/questions/18554721/how-to-understand-size-t-type-0-member)
+- 实现
+
+```cpp
+struct node_t {
+    char a;
+    int b;
+    int c;
+};
+struct node_t node;
+// 方法1
+(unsigned long)(&(node.c)) - (unsigned long)(&(node))
+// 方法2
+#define OFFSET_OF(type, member) (unsigned long)(&(((type *)0)->member))
+```
+
+---
+
 #### POD ( Plain Old Data ) 数据结构
 
 1. 特征：
@@ -73,6 +72,10 @@ struct test
      - 所有非静态成员都符合标准布局类型，其父类也符合标准布局
 2. 可直接使用`memcpy`等函数
 3. C++判断：`is_pod<T>::value `
+
+---
+
+#### 堆栈
 
 ---
 
@@ -342,6 +345,14 @@ new (place_address) type [size] { braced initializer list }
 方法：将 new 和 delete 重载为私有
 
 原因：在堆上生成对象，使用 new 关键词操作，其过程分为两阶段：第一阶段，使用 new 在堆上寻找可用内存，分配给对象；第二阶段，调用构造函数生成对象。将 new 操作设置为私有，那么第一阶段就无法完成，就不能够在堆上生成对象。
+
+---
+
+#### 共享内存
+
+---
+
+#### 零拷贝
 
 ---
 
