--- a/content/cpp/7.advanced.md
+++ b/content/cpp/7.advanced.md
@@ -4,6 +4,8 @@ date = 2023-12-20T19:19:54+08:00
 draft = false
 +++
 
+---
+
 #### C++11原子操作与无锁编程
 
 [参考资料](https://www.jianshu.com/p/3e122ee901c5)
@@ -21,6 +23,10 @@ draft = false
    - 基于硬件的[原子指令](https://blog.csdn.net/qianniuwei321/article/details/124817265)
    - 使用锁机制
 5. c++11无锁队列[concurrentqueue](https://github.com/cameron314/concurrentqueue)
+
+---
+
+#### 内存屏障
 
 ---
 
