--- a/content/cpp/1.language_grammar.md
+++ b/content/cpp/1.language_grammar.md
@@ -704,6 +704,8 @@ int main(){
 
 ---
 
+#### 命名空间与作用域
+
 #### using
 
 ##### using 声明
@@ -1004,5 +1006,46 @@ int main() {
     return 0;
 }
 ```
+
+---
+
+#### 异常处理
+
+* 异常：某种对象，大部分时候被抛出的异常属于特定的异常类；异常包括了 异常的鉴定与发出 和 异常的处理方式
+
+* C++规定每个异常都应该被处理，直至调用标准库的`terminate()`中断整个程序的执行
+
+* 在异常处理机制终结某个函数之前，C++保证函数中的**所有局部对象**的**析构函数**都会**被调用**（涉及局部资源管理）
+
+  ```c++
+  extern Mutex m;
+  void f(){
+      int *p = new int;
+      m.acquire();
+      process(p);		// 抛出异常导致后续代码不能执行, 造成资源泄漏
+      m.release();
+      delete p;
+  }
+  ```
+
+* 所有`catch`子句成功运行后，即不抛出其他异常，由正常程序接手
+
+* 重新抛出：
+
+  ```c++
+  catch(iterrator_overflow &iof){
+      log_message(iof.what_happenned());
+      throw; // 重新抛出异常
+  }
+  ```
+
+* 捕获任何类型异常：
+
+  ```c++
+  catch(.../*捕获任意异常*/){
+      log_message("exception of unknown type");
+      // 其他操作
+  }
+  ```
 
 ---
