--- a/content/cpp/3.memory.md
+++ b/content/cpp/3.memory.md
@@ -75,6 +75,62 @@ struct node_t node;
 
 ---
 
+#### 大小端检测方法
+
+* 大端模式：是指数据的高字节保存在内存的低地址中，而数据的低字节保存在内存的高地址端
+* 小端模式，是指数据的高字节保存在内存的高地址中，低位字节保存在在内存的低地址端
+* [Linux C中判断cpu大小端序的几种方法: 用指针判断linux中是大端还是小端](https://blog.csdn.net/guotianqing/article/details/88775949)
+
+1. ###### Linux内核对大小端的处理
+
+   ```c++
+   static union { 
+   		char c[4]; 
+   		unsigned long mylong; 
+   } endian_test = {{ 'l', '?', '?', 'b' } };
+   		
+   #define ENDIANNESS ((char)endian_test.mylong)
+   // 如果ENDIANNESS=‘l’则代表是小端 .是'b'则代表是大端.
+   if (ENDIANNESS == 'b')/* 高位在低字节 */
+   	printf("大端序\n");
+   else
+   	printf("小端序\n");
+   ```
+
+2. ###### 使用联合体
+
+   ```c++
+   int check_cpu_type(){
+   		union w {
+   			int a;
+   			char b;
+   		} c;
+   		
+   		c.a = 1;
+   		
+   		if (c.b == 1)/* 低位低字节 */
+   			printf("小端序\n");
+   		else
+   			printf("大端序\n");
+   }
+   ```
+
+3. ###### 使用指针
+
+   ```c++
+   int check_cpu_type() {
+         int i = 0x1;
+         unsigned char *p;
+         
+         p = (unsigned char *)&i;
+         
+         if (*p) printf("小端序\n");
+         else printf("大端序\n");
+   }
+   ```
+
+---
+
 #### 堆栈
 
 ---
