--- a/content/cpp/5.stl.md
+++ b/content/cpp/5.stl.md
@@ -365,48 +365,7 @@ int main(){
 }
 ```
 
-
-
-#### 异常处理
-
-* 异常：某种对象，大部分时候被抛出的异常属于特定的异常类；异常包括了 异常的鉴定与发出 和 异常的处理方式
-
-* C++规定每个异常都应该被处理，直至调用标准库的`terminate()`中断整个程序的执行
-
-* 在异常处理机制终结某个函数之前，C++保证函数中的**所有局部对象**的**析构函数**都会**被调用**（涉及局部资源管理）
-
-  ```c++
-  extern Mutex m;
-  void f(){
-      int *p = new int;
-      m.acquire();
-      process(p);		// 抛出异常导致后续代码不能执行, 造成资源泄漏
-      m.release();
-      delete p;
-  }
-  ```
-
-* 所有`catch`子句成功运行后，即不抛出其他异常，由正常程序接手
-
-* 重新抛出：
-
-  ```c++
-  catch(iterrator_overflow &iof){
-      log_message(iof.what_happenned());
-      throw; // 重新抛出异常
-  }
-  ```
-
-* 捕获任何类型异常：
-
-  ```c++
-  catch(.../*捕获任意异常*/){
-      log_message("exception of unknown type");
-      // 其他操作
-  }
-  ```
-
-* C++标准异常
+#### C++标准异常
 
   | 异常                                                         | 描述                                                         |
   | ------------------------------------------------------------ | ------------------------------------------------------------ |
@@ -452,58 +411,3 @@ int main(){
 
 ---
 
-#### 大小端检测方法
-
-* 大端模式：是指数据的高字节保存在内存的低地址中，而数据的低字节保存在内存的高地址端
-* 小端模式，是指数据的高字节保存在内存的高地址中，低位字节保存在在内存的低地址端
-* [Linux C中判断cpu大小端序的几种方法: 用指针判断linux中是大端还是小端](https://blog.csdn.net/guotianqing/article/details/88775949)
-
-1. ###### Linux内核对大小端的处理
-
-   ```c++
-   static union { 
-   		char c[4]; 
-   		unsigned long mylong; 
-   } endian_test = {{ 'l', '?', '?', 'b' } };
-   		
-   #define ENDIANNESS ((char)endian_test.mylong)
-   // 如果ENDIANNESS=‘l’则代表是小端 .是'b'则代表是大端.
-   if (ENDIANNESS == 'b')/* 高位在低字节 */
-   	printf("大端序\n");
-   else
-   	printf("小端序\n");
-   ```
-
-2. ###### 使用联合体
-
-   ```c++
-   int check_cpu_type(){
-   		union w {
-   			int a;
-   			char b;
-   		} c;
-   		
-   		c.a = 1;
-   		
-   		if (c.b == 1)/* 低位低字节 */
-   			printf("小端序\n");
-   		else
-   			printf("大端序\n");
-   }
-   ```
-
-3. ###### 使用指针
-
-   ```c++
-   int check_cpu_type() {
-         int i = 0x1;
-         unsigned char *p;
-         
-         p = (unsigned char *)&i;
-         
-         if (*p) printf("小端序\n");
-         else printf("大端序\n");
-   }
-   ```
-
----
