--- a/content/cpp/1.language_grammar.md
+++ b/content/cpp/1.language_grammar.md
@@ -427,7 +427,7 @@ int operator++(int){
   4. 在栈内为传参分配空间
   5. 在栈内为函数内局部变量分配空间，执行被调用函数
 
-  <img src=".\pics\cpp函数调用.jpg" style="zoom: 67%;" />
+  <img src="/images/cpp/cpp_function_call.jpg" style="zoom: 67%;" />
 
 * 当**返回**函数时，系统进行的动作刚好与函数调用时相反，内存模型如下图：
 
@@ -438,7 +438,7 @@ int operator++(int){
   4. 退栈，得到调用前运行状态，恢复调用前运行状态
   5. 释放该调用函数栈空间
 
-  <img src=".\pics\cpp函数返回.jpg" style="zoom:67%;" />
+  <img src="/images/cpp/cpp_function_return.jpg" style="zoom:67%;" />
 
   * 局部变量在函数调用结束后就被销毁。栈是内存中的一部分空间，因此也是有限资源，如频繁调用函数而不返回已调用函数，栈就会被不断开辟，最终导致栈溢出（stack overflow），程序崩溃，所以在处理一些递归函数上需要特别注意结束条件
 
