--- a/content/cpp/2.oop.md
+++ b/content/cpp/2.oop.md
@@ -915,7 +915,7 @@ int main()
 
 - 菱形继承：
 
-<img src="./pics/菱形继承.png" style="zoom:80%;" />
+<img src="/images/cpp/diamond_inheritance.png" style="zoom:80%;" />
 
 - 虚继承：用于解决多继承条件下的菱形继承问题（浪费存储空间、存在二义性）
 
