--- a/content/cpp/3.memory.md
+++ b/content/cpp/3.memory.md
@@ -252,7 +252,7 @@ int main()
 
 * new/delete 内存分配途径
 
-  ![](pics\C++内存管理.png)
+  <img src="/images/cpp/cpp_mem.png"/>
 
 ##### 定位 new（placement new）
 
