--- a/content/cpp/1.language_grammar.md
+++ b/content/cpp/1.language_grammar.md
@@ -14,6 +14,58 @@ draft = false
 
 ---
 
+#### 宏
+
+- 宏定义可以实现类似于函数的功能，但是它终归不是函数，而宏定义中括弧中的“参数”也不是真的参数，在宏展开的时候对 “参数” 进行的是一对一的替换。
+
+- 使用宏时要非常谨慎，尽量以**内联函数**、**枚举**和**常量**代替
+
+- `#`：对应变量字符串化
+  ```c++
+  #define mkstr(s) #s
+  mkstr(lervisnh); // 输出 lervisnh
+  ```
+
+- 连接符`#@`：将单字符标记符变换为单字符，即加单引号
+  ```c++
+  #define B(x) #@x
+  // B(a)即'a'，B(1)即'1'
+  ```
+
+- `##`：把宏参数名与宏定义代码序列中的标识符连接在一起，形成一个新的标识符
+  ```c++
+  #define concat(a, b) a##b
+  int xy = 101;
+  printf("%d", concat(x, y)); // 输出101
+  ```
+
+---
+
+#### auto
+
+1. C++11 之前，用来声明自动变量，表明变量存储在栈，很少使用
+2. 自动类型推断 (C++11)
+
+```c++
+auto i = 42;		//i is an int
+auto l = 42LL;  	//l is an long long
+auto p = new foo(); //p is a foo*
+```
+
+3. 函数返回值的占位符 (C++11)
+
+   - 声明或定义函数返回值的占位符，需与 [`decltype`](####`decltype` (C++11)) 配合使用
+
+   - 如果函数有一个尾随的返回类型时，`auto` 可以出现在函数声明中返回值位置。此时，auto 是指引编译器去函数的末端寻找返回值类型。如下例，函数返回值类型是 operator+ 操作符作用在 T、U 类型变量上的返回值类型
+
+     ```c++
+     template<class T, class U> auto add(T t, U u) -> decltype(t + u) {
+         return t + u;
+     }
+     ```
+
+---
+
 #### const
 
 * 作用：
@@ -168,7 +220,7 @@ class ClassName{
 
 ---
 
-#### `constexpr` 与 `const` 的区别
+#### `constexpr` VS `const` 
 
 - `const`可修饰函数参数、函数返回值、函数本身、类等，描述的是“运行时常量性”，即在运行时数据具有不可更改性
 - `constexpr`可修饰函数参数、函数返回值、变量、类的构造函数、函数模板等，比`const`的约束更加严格，除具有“运行时常量性”，也具有“编译时常量性”，即编译期可知`constexpr`修饰的表达式的值
@@ -182,8 +234,6 @@ constexpr int getConst(){ return 1; }
 enum{ e1=getConst(),e2};				//编译OK
 ```
 
-
-
 ---
 
 #### mutable
@@ -191,10 +241,10 @@ enum{ e1=getConst(),e2};				//编译OK
 [C++ 关键字 mutable](https://blog.csdn.net/hellokandy/article/details/52317681)
 
 * 为了突破 `const` 的限制而设置的
-* 被 mutable 修饰的变量，将永远处于可变的状态，即使在一个 const 函数中，甚至结构体变量或者类对象为 const，其 mutable 成员也可以被修改
+* 被 mutable 修饰的变量，将永远处于可变的状态，即使在一个 `const` 函数中，甚至结构体变量或者类对象为 `const`，其 mutable 成员也可以被修改
 * mutable 在类中只能够修饰非静态数据成员
-* mutable 数据成员的使用看上去像是骗术，因为它能够使 const 函数修改对象的数据成员。mutable 能够向用户隐藏实现细节，而无须使用不确定的东西
-* 如果类的成员函数不会改变对象的状态，那么这个成员函数一般会声明成 const 的。但是，有些时候需要在 const 的函数里面修改一些跟类状态无关的数据成员，那么这个数据成员就应该被mutalbe来修饰
+* mutable 数据成员的使用看上去像是骗术，因为它能够使 `const` 函数修改对象的数据成员。mutable 能够向用户隐藏实现细节，而无须使用不确定的东西
+* 如果类的成员函数不会改变对象的状态，该成员函数一般被声明成 `const` ；但是，如果需要在 `const` 的函数中修改一些跟类状态无关的数据成员，该使用 `mutalbe` 修饰数据成员
 * `mutable`的意义：对mutable声明的变量所做的改变不会破坏`class object`的常量性，不能视为改变`class object`的状态
 
 ```c++
@@ -230,7 +280,7 @@ int _tmain(int argc, _TCHAR* argv[]) {
 
 ---
 
-#### restrict修饰符
+#### restrict
 
 * C99标准引入
 * 用于限定和约束指针，并表明指针是访问一个数据对象的唯一且初始的方式
@@ -264,53 +314,35 @@ int *restrict ptr
 
 ---
 
-#### 宏
+#### 指针
 
-- 宏定义可以实现类似于函数的功能，但是它终归不是函数，而宏定义中括弧中的“参数”也不是真的参数，在宏展开的时候对 “参数” 进行的是一对一的替换。
+- 指针的本意是内存地址，可以通俗理解为内存编号；通过编号来操作内存单元，造就了指针的高效率
+- 使用:
 
-- 使用宏时要非常谨慎，尽量以**内联函数**、**枚举**和**常量**代替
-
-- `#`：对应变量字符串化
-  ```c++
-  #define mkstr(s) #s
-  mkstr(lervisnh); // 输出 lervisnh
+  ```cpp
+  int    *ip;    /* 一个整型的指针 */
+  double *dp;    /* 一个 double 型的指针 */
+  float  *fp;    /* 一个浮点型的指针 */
+  char   *ch;    /* 一个字符型的指针 */
   ```
 
-- 连接符`#@`：将单字符标记符变换为单字符，即加单引号
-  ```c++
-  #define B(x) #@x
-  // B(a)即'a'，B(1)即'1'
-  ```
+#### nullptr_t / nullptr (C++11)
 
-- `##`：把宏参数名与宏定义代码序列中的标识符连接在一起，形成一个新的标识符
-  ```c++
-  #define concat(a, b) a##b
-  int xy = 101;
-  printf("%d", concat(x, y)); // 输出101
-  ```
+1. C++11 之前，用 0 来表示空指针，但由于 0 会被隐式类型转换为整型，某些场景下会存在问题
+2. nullptr 是 std::nullptr_t 类型的值，用来指代空指针常量
+3. nullptr 和任何指针类型、类成员指针类型的空值可发生隐式类型转换，也可隐式转换为 bool 型 (取值为false)
+4. nullptr 不存在到整型的隐式转换
+    ```c++
+    int* p1 = NULL;
+    int* p2 = nullptr;
+    ```
 
----
-
-#### `noexcept`
-
-1. 修饰符
-
-   ```cpp
-   voidFunc3() noexcept;
-   voidFunc4() noexcept(常量表达式);
-   ```
-
-   - `voidFunc3()`表示函数不会抛出异常，`noexcept`修饰的函数抛出了异常，编译器调用`std::terminate()`终止程序运行
-   - `voidFunc4()`常量表达式的结果为`true`，表示该函数不会抛出异常，反之（`false`）则有可能抛出异常
-
-2. 操作符（常用于模板）
-
-   ```cpp
-   template <typename T> void func5() noexcept(noexcept(T())) {}
-   ```
-
-   - `noexcept(T())` 是一个操作符，如果其参数是一个有可能抛出异常的表达式，`noexcept(T())` 则返回值为false，那么 func5 有可能会抛出异常；如果 `noexcept(T())` 返回 true，func5 不会抛出异常
-   - 函数模板是否会抛出异常，可由表达式进行推导，使得 C++11 更好支持泛型
+5. 使用注意：
+   - 可以使用 nullptr_t 定义空指针，但所有定义为 nullptr_t 类型的对象行为上是完全一致的
+   - nullptr_t 类型对象可以隐式转换为任意一个指针类型
+   - nullptr_t 类型对象不能转换为非指针类型，即使 `reinterpret_cast` 强制类型转换也不行
+   - nullptr_t 类型对象不能用于算术运算表达式
+   - nullptr_t 类型对象可以用于关系运算表达式，但仅能与 nullptr_t 类型或**指针类型对象**比较，当且仅当关系运算符为==、>=、<=时，如果相等则返回 true
 
 ---
 
@@ -354,7 +386,7 @@ int *restrict ptr
 
 ##### 完美转发
 
-std::forward被称为**完美转发**，它的作用是保持原来的**值**属性不变
+`std::forward` 被称为**完美转发**，它的作用是保持原来的**值**属性不变
 
 * 如果原来的值是左值，经std::forward处理后该值还是左值
 * 如果原来的值是右值，经std::forward处理后它还是右值
@@ -366,13 +398,19 @@ std::forward被称为**完美转发**，它的作用是保持原来的**值**属
 
 ---
 
-#### 指针和引用的区别
+#### 指针 VS 引用
 
 [参考链接](https://blog.csdn.net/weikangc/article/details/49762929)
 
-1. 引用必须被初始化，但不分配存储空间。指针不声明时初始化，在初始化时需分配存储空间。
-2. 引用初始化后不能被改变，指针能够改变所指的对象。
-3. **不存在指向空值的引用，但存在指向空值的指针**。
+- 相同点：都是内存地址的概念
+- 不同点：
+  |              | 引用Reference                                        | 指针Pointer                            |
+  | ------------ | ---------------------------------------------------- | -------------------------------------- |
+  | 初始化       | 必须被初始化，但不分配存储空间                       | 不声明时初始化，初始化时需分配存储空间 |
+  | 重新分配     | 初始化后不能被改变                                   | 能够改变所指的地址                     |
+  | 内存地址     | 与原始变量共享相同的地址，是内存空间的别名           | 存储变量的地址                         |
+  | 参数使用     | 引用传递                                             | 值传递                                 |
+  | 符号表的体现 | 符号表对应地址值为引用对象的地址值，且生成后不再改变 | 符号表对应地址值为指针变量的地址值     |
 
 ---
 
@@ -396,7 +434,7 @@ std::forward被称为**完美转发**，它的作用是保持原来的**值**属
 * 前置返回一个引用，不会产生临时对象
 
 ```c++
-int& operator++(){
+int& operator++() {
     *this += 1;
 	return *this;
 } 
@@ -407,53 +445,12 @@ int& operator++(){
 * 后置返回一个对象，必须产生临时对象，临时对象会导致效率降低
 
 ```c++
-int operator++(int){
+int operator++(int) {
     int temp = *this;
     ++*this;
     return temp;                  
 } 
 ```
-
----
-
-
-#### 函数调用与返回
-
-* 当**调用**一个函数时，系统发生进行如下动作，内存模型如下图：
-
-  1. 开辟该调用函数的栈空间
-  2. 将当前的运行状态压栈（从右向左依次把被调函数所需要的参数压入栈）
-  3. 将返回地址压栈
-  4. 在栈内为传参分配空间
-  5. 在栈内为函数内局部变量分配空间，执行被调用函数
-
-  <img src="/images/cpp/cpp_function_call.jpg" style="zoom: 67%;" />
-
-* 当**返回**函数时，系统进行的动作刚好与函数调用时相反，内存模型如下图：
-
-  1. 释放栈内局部变量空间
-
-  2. 释放栈内传参空间
-  3. 退栈，得到返回地址，程序跳转调用处等待
-  4. 退栈，得到调用前运行状态，恢复调用前运行状态
-  5. 释放该调用函数栈空间
-
-  <img src="/images/cpp/cpp_function_return.jpg" style="zoom:67%;" />
-
-  * 局部变量在函数调用结束后就被销毁。栈是内存中的一部分空间，因此也是有限资源，如频繁调用函数而不返回已调用函数，栈就会被不断开辟，最终导致栈溢出（stack overflow），程序崩溃，所以在处理一些递归函数上需要特别注意结束条件
-
-* 函数调用约定：
-
-  * 传递参数，即参数**从右自左**压入堆栈，函数内部正好从左自右读出参数
-  * 函数执行清除堆栈，即调用函数是堆栈中压入参数时占用了位置，这些位置由调用函数负责清空
-
----
-
-#### `__stdcall` 和 `__cdecl` 的区别
-
-* `__stdcall`：恢复函数自身的堆栈，只有在函数代码的结尾出现一次恢复堆栈的代码；编译时就规定了参数个数，无法实现不定个数的参数调用
-
-* `__cdecl`：恢复堆栈，假设有100个函数调用函数a，那么内存中就有100端恢复堆栈的代码；可以不定参数个数；每一个调用它的函数都包含清空堆栈的代码，所以产生的可执行文件大小会比调用`__stacall`函数大。支持可变参数，如`fprintf()`
 
 ---
 
@@ -505,28 +502,18 @@ inline int A::doA() { return 0; }   // 需要显式内联
 
 ---
 
-#### c++符号表解析/函数签名
-
-[c++符号表解析](https://blog.csdn.net/wdjjwb/article/details/86233389)
-
-* 函数签名：包含了一个函数的信息，包括函数名、它的参数类型、它所在的类和名称空间及其他信息
-* 函数签名用于识别不同的函数
-* 函数签名顺序：命名空间(如有) --> 类名(如有) --> 函数名
-
----
-
 #### volatile
 
-- volatile 关键字是一种**类型修饰符**，用它声明的类型变量表示可以被某些编译器未知的因素（操作系统、硬件、其它线程等）更改。使用 volatile 告诉编译器不应对这样的对象进行优化。
-- volatile 关键字声明的变量，每次访问时都必须从**内存**中取出值（没有被 volatile 修饰的变量，可能由于编译器的优化，从 CPU 寄存器中取值）
-- const 可以是 volatile （如只读的状态寄存器）
+- volatile 是一种**类型修饰符**，用它声明的类型变量可以避免被某些编译器未知的因素（操作系统、硬件、其它线程等）更改，即编译器不会被 `volatile` 修饰的变量/对象进行优化
+- volatile 声明的变量，每次访问时都必须从**内存**中取出值（如没有被 volatile 修饰的变量，可能由于编译器优化，从 CPU 寄存器中取值）
+- `const` 可以是 volatile （如只读的状态寄存器）
 - 指针可以是 volatile
 
 ---
 
 #### assert()
 
-- 断言，是宏，而非函数。
+- 断言，是宏，而非函数
 - assert 宏的原型定义在`<assert.h>` (C)、`<cassert>`(C++)，其**作用是如果它的条件返回错误，则终止程序执行**
 - 可通过在定义 `#include <assert.h>`  之前 `NDEBUG` 来关闭 assert
 - 使用
@@ -538,6 +525,33 @@ inline int A::doA() { return 0; }   // 需要显式内联
 assert( p != NULL );    // assert 不可用
 ```
 
+#### static_assert (C++11)
+
+1. C++11引入的静态断言，用于检测和诊断编译期错误（assert用于运行时断言宏）
+2. 断言表达式必须是在**编译期**可以计算的表达式，即必须是常量表达式。如果为 true 可正常编译；如果断言表达式的值为 false ，编译器会出现一个包含指定字符串的错误，导致编译失败。如
+
+    ```c++
+    static_assert(sizeof(void*) == 8,"not supported");  
+    ```
+
+3. 编译时提供关于类型的信息，但需和`type traits`配合使用。头文件<type_traits>中的helper class，用来产生编译时常量；type traits class，用来在编译时获取类型信息；type transformation class 可以将已存在的类型变换为新的类型。如
+
+    ```c++
+    template <typename T1, typename T2> auto add(T1 t1, T2 t2) {
+       static_assert(std::is_integral<T1>::value, "Type T1 must be integral");
+       static_assert(std::is_integral<T2>::value, "Type T2 must be integral");
+       return t1 + t2;
+    };
+    std::cout << add(1, 3.14) << std::endl; // 编译报错
+    std::cout << add("one", 2) << std::endl; // 编译报错
+    ```
+
+4. 注意事项：
+   - static_assert可用在全局作用域、命名空间、类作用域、函数作用域，几乎不受限制
+   - static_assert能够在编译期间发现更多的错误，用编译器来强制保证一些契约，改善编译信息的可读性，尤其用于模板
+   - 编译器对static_assert语句会立刻将其第一个参数作为常量表达式进行演算；如第一个常量表达式依赖于某些模板参数，则延迟到模板实例化时再进行演算，因此能够检查模板参数
+   - 由于static_assert编译期间断言，不生成目标代码，所以不会造成任何运行期性能损失
+
 ---
 
 #### sizeof()
@@ -545,6 +559,17 @@ assert( p != NULL );    // assert 不可用
 - 单目运算符，不是函数；sizeof 不能用来返回动态分配的内存空间的大小
 - sizeof 对数组，得到整个数组所占空间大小
 - sizeof 对指针，得到指针本身所占空间大小
+
+#### sizeof… (C++11)
+
+- 获取 C++11 中可变参数模板中参数包中元素个数，`sizeof…` 返回一个常量表达式，而且不会对模板的实参求值
+
+  ```c++
+  template<typename... Args> void g(Args... args) {
+  	cout << sizeof...(Args) << endl;  //类型参数的数目
+  	cout << sizeof...(args) << endl;  //函数参数的数目
+  }
+  ```
 
 ---
 
@@ -560,134 +585,90 @@ size_t strlen(char const* str);
 
 ---
 
-#### strcpy、strncpy、strcat、strcmp
+#### strcpy / strncpy / strcat / strcmp
 
-* strcpy:复制字符串，a中字符串复制到b中，b中的字符串将被覆盖。
+* `strcpy`: 复制字符串，a中字符串复制到b中，b中的字符串将被覆盖。
 
-* strcat:字符串的连接，没有覆盖现象
+* `strcat`: 字符串的连接，没有覆盖现象
 
-* strncpy:复制字符串的前n个字符，如果是复制所有的字符会包含'\0'，但是中间的话就没有，要自己添加，例如:
+* `strncpy`: 复制字符串的前n个字符，如果是复制所有的字符会包含'\0'，但是中间的话就没有，要自己添加，例如:
 
   ```c++
   strncpy(b,a,i-1);
   b[i-1]='\0';
   ```
 
-* strcmp：对两个字符串进行比较，然后返回比较结果，函数形式如下：
-  int strcmp(constchar*str1,constchar*str2);
-  其中str1和str2可以是字符串常量或者字符串变量，返回值为整形。返回结果如下规定：
-  ①str1小于str2，返回负值或者-1（VC返回-1）；
-  ②str1等于str2，返回0；
-  ③str1大于str2，返回正值或者1（VC返回1）；
-  strcmp函数实际上是对字符的ASCII码进行比较，实现原理如下：首先比较两个串的第一个字符，若不相等，则停止比较并得出两个ASCII码大小比较的结果；如果相等就接着比较第二个字符然后第三个字符等等。无论两个字符串是什么样，strcmp函数最多比较到其中一个字符串遇到结束符'/0'为止，就能得出结果。
+* `strcmp`：对两个字符串进行比较，然后返回比较结果
+  
+  1. 函数形式如下：
+  
+  ```cpp
+  int strcmp(const char*str1,const char*str2);
+  ```
+  
+  ​		其中str1和str2可以是字符串常量或者字符串变量，返回值为整形。返回结果如下规定：
+  ​		① str1小于str2，返回负值或者-1（VC返回-1）
+  ​		② str1等于str2，返回0
+  ​		③ str1大于str2，返回正值或者1（VC返回1）
+  
+  2. 实现原理：对字符的ASCII码进行比较。首先比较两个串的第一个字符，若不相等，则停止比较并得出两个ASCII码大小比较的结果；如果相等就接着比较第二个字符然后第三个字符等等。无论两个字符串是什么样，strcmp函数最多比较到其中一个字符串遇到结束符'/0'为止，就能得出结果。
 
 ---
 
 #### 手动实现`string`类
 
 ```c++
-class my_string {
-	friend std::ostream& operator <<(ostream& os, const my_string& str);
-	friend std::istream& operator >>(istream& is, my_string& str);
+#include <cstring>
+#include <iostream>
+using namespace std;
+
+class Mystring {
+	char* str;
 public:
-	my_string(const char * str = NULL);
-	my_string(const my_string &);
-	~my_string();
-	my_string operator=(const my_string &);
-	my_string operator+(const my_string &);
-	bool operator==(const my_string&);
-	char& operator[](int);
-	int size() { return strlen(this->data) + 1; }
-private:
-	char* data;
+	Mystring() : str{ nullptr } {
+        str = new char[1];
+        str[0] = '\0';
+    };
+	Mystring(char* val) {
+        if (val == nullptr) {
+            str = new char[1];
+            str[0] = '\0';
+        }
+        else {
+            str = new char[strlen(val) + 1];
+            // Copy character of val[]
+            // using strcpy
+            strcpy(str, val);
+            str[strlen(val)] = '\0';
+            cout << "The string passed is: "
+                << str << endl;
+        }
+    };
+	// Copy Constructor
+	Mystring(const Mystring& source) {
+        str = new char[strlen(source.str) + 1];
+        strcpy(str, source.str);
+        str[strlen(source.str)] = '\0';
+    };
+	// Move Constructor
+	Mystring(Mystring&& source) {
+        str = source.str;
+        source.str = nullptr;
+    };
+	// Destructor
+	~Mystring() { delete str; }
 };
- 
-my_string::my_string(const char* str){
-	if (str == NULL)this->data = NULL;
-	else{
-		this->data = new char[strlen(str) + 1];
-		strcpy(data,str);
-	}
-};
- 
-my_string::my_string(const my_string& other){
-	if (other.data == NULL) this->data = NULL;
-	else{
-		this->data = new char[strlen(other.data)+1];
-		strcpy(this->data,other.data);
-	}
-};
- 
-my_string::~my_string(){
-	delete[] this->data;
-};
- 
-my_string my_string::operator=(const my_string& other){
-	delete[] this->data;
-	if (other.data == NULL)this->data = NULL;
-	else{
-		this->data = new char[strlen(other.data)+1];
-		strcpy(this->data,other.data);
-	}
-	return *this;
-};
- 
-my_string my_string::operator+(const my_string& other){
-	if (other.data == NULL)return *this;
-	else if(this->data == NULL){
-		this->data = new char[strlen(other.data) + 1];
-		strcpy(this->data, other.data);
-		return *this;
-	} else {
-		my_string strTmp;
-		strTmp.data = new char[strlen(this->data) + strlen(other.data) + 1];
-		strcpy(strTmp.data, this->data);
-		strcat(strTmp.data, other.data);
-		return strTmp;
-	}
-};
- 
-bool my_string::operator==(const my_string& other){
-	int tmp = 0;
-	tmp = strcmp(this->data,other.data);
-	if (tmp == 0)return 1;
-	else return 0;
-};
- 
-char& my_string::operator[](int index){
-	return this->data[index];
-};
- 
-ostream& operator<<(ostream& os, const my_string& str){
-	os << str.data;
-	return os;
-};
- 
-istream& operator>>(istream& is, my_string& str){
-	char buffer[4096];
-	is >> buffer;
-	str.data = buffer;
-	return is;
-};
- 
-int main(){
-	my_vector<int> mv1(3);
-	mv1[0] = 0;
-	mv1[1] = 1;
-	mv1[2] = 2;
- 
-	my_vector<int> mv2(mv1);
-	cout << mv2[0] << mv2[1] << mv2[2] << endl;
- 
-	my_string str1, str2,str3;
-	str1 = "qweewq";
-	str2 = "qweewq";
-	str3 = str1 + str2;
-	cout << str3 << endl;
-	if (str1 == str2)cout << "str1 和 str2 相同 " << endl;
-	cout << str1[1] << str1.size() << endl;
+
+int main() {
+	Mystring a;
+	char temp[] = "Hello";
+	Mystring b{ temp };
+	Mystring c{ a }; // copy constructor
+
+	char temp1[] = "World";
+	Mystring d{ Mystring{ temp } }; // move constructor
 	return 0;
-}
+};
 ```
 
 ---
@@ -704,11 +685,61 @@ int main(){
 
 ---
 
+#### 函数调用与返回
+
+* 当**调用**一个函数时，系统发生进行如下动作，内存模型如下图：
+
+  1. 开辟该调用函数的栈空间
+  2. 将当前的运行状态压栈（从右向左依次把被调函数所需要的参数压入栈）
+  3. 将返回地址压栈
+  4. 在栈内为传参分配空间
+  5. 在栈内为函数内局部变量分配空间，执行被调用函数
+
+  <img src="/images/cpp/cpp_function_call.jpg" style="zoom: 67%;" />
+
+* 当**返回**函数时，系统进行的动作刚好与函数调用时相反，内存模型如下图：
+
+  1. 释放栈内局部变量空间
+
+  2. 释放栈内传参空间
+  3. 退栈，得到返回地址，程序跳转调用处等待
+  4. 退栈，得到调用前运行状态，恢复调用前运行状态
+  5. 释放该调用函数栈空间
+
+  <img src="/images/cpp/cpp_function_return.jpg" style="zoom:67%;" />
+
+  * 局部变量在函数调用结束后就被销毁。栈是内存中的一部分空间，因此也是有限资源，如频繁调用函数而不返回已调用函数，栈就会被不断开辟，最终导致栈溢出（stack overflow），程序崩溃，所以在处理一些递归函数上需要特别注意结束条件
+
+* 函数调用约定：
+
+  * 传递参数，即参数**从右自左**压入堆栈，函数内部正好从左自右读出参数
+  * 函数执行清除堆栈，即调用函数是堆栈中压入参数时占用了位置，这些位置由调用函数负责清空
+
+---
+
+#### `__stdcall` 和 `__cdecl` 的区别
+
+* `__stdcall`：恢复函数自身的堆栈，只有在函数代码的结尾出现一次恢复堆栈的代码；编译时就规定了参数个数，无法实现不定个数的参数调用
+
+* `__cdecl`：恢复堆栈，假设有100个函数调用函数a，那么内存中就有100端恢复堆栈的代码；可以不定参数个数；每一个调用它的函数都包含清空堆栈的代码，所以产生的可执行文件大小会比调用`__stacall`函数大。支持可变参数，如`fprintf()`
+
+---
+
+#### c++符号表解析/函数签名
+
+[c++符号表解析](https://blog.csdn.net/wdjjwb/article/details/86233389)
+
+* 函数签名：包含了一个函数的信息，包括函数名、它的参数类型、它所在的类和名称空间及其他信息
+* 函数签名用于识别不同的函数
+* 函数签名顺序：命名空间(如有) --> 类名(如有) --> 函数名
+
+---
+
 #### 命名空间与作用域
 
-#### using
+##### using (C++11)
 
-##### using 声明
+###### using 声明
 
 一条 `using 声明` 语句**一次只引入命名空间的一个成员**。它使得我们可以清楚知道程序中所引用的到底是哪个名字。如：
 
@@ -716,7 +747,7 @@ int main(){
 using namespace_name::name;
 ```
 
-##### 构造函数的 using 声明
+###### 构造函数的 using 声明
 
 在 C++11 中，派生类能够重用其直接基类定义的构造函数
 
@@ -734,7 +765,7 @@ public:
 Derived(parms) : Base(args) { }
 ```
 
-##### using 指示
+###### using 指示
 
 `using 指示` 使得某个特定命名空间中所有名字都可见，这样我们就无需再为它们添加任何前缀限定符了。如：
 
@@ -742,7 +773,7 @@ Derived(parms) : Base(args) { }
 using namespace_name name;
 ```
 
-##### using 使用注意事项
+###### using 使用注意事项
 
 - 少使用 `using 指示`：一般说来，使用 using 命令比使用 using 编译命令更安全，这是由于它**只导入了指定的名称**。如果该名称与局部名称发生冲突，编译器将**发出指示**。using编译命令导入所有的名称，包括可能并不需要的名称。如果与局部名称发生冲突，则**局部名称将覆盖名称空间版本**，而编译器**并不会发出警告**。另外，名称空间的开放性意味着名称空间的名称可能分散在多个地方，这使得难以准确知道添加了哪些名称。
 
@@ -767,7 +798,7 @@ cout << x << endl;
 
 ---
 
-#### `:: ` 范围解析运算符
+##### `:: ` 范围解析运算符
 
 1. 全局作用域符（`::name`）：用于类型名称（类、类成员、成员函数、变量等）前，表示作用域为全局命名空间
 2. 类作用域符（`class::name`）：用于表示指定类型的作用域范围是具体某个类的
@@ -815,16 +846,16 @@ enum { floatPrec = 6, doublePrec = 10 };
 
 ---
 
-#### decltype
+#### `decltype` (C++11)
 
 * 从表达式的类型推断出要定义的变量类型，但是不想用该表达式的值初始化变量（初始化可以用`auto`）。为了满足这一需求，C++11新标准引入了`decltype`类型说明符，它的作用是**选择并返回操作数的数据类型**，在此过程中，编译器分析表达式并得到它的类型，却不实际计算表达式的值
-* decltype 关键字用于检查实体的声明类型或表达式的类型及值分类。语法：
+* `decltype` 关键字用于检查实体的声明类型或表达式的类型及值分类。语法：
 
 ```cpp
 decltype ( expression )
 ```
 
-- decltype 使用
+- `decltype` 使用
 
 ```cpp
 // 尾置返回允许我们在参数列表之后声明返回类型
@@ -913,9 +944,7 @@ typedef struct Student S;
 
 由于编译器定位符号的规则（搜索规则）改变，导致不同于C语言。
 
-一、如果在类标识符空间定义了 `struct Student {...};`，使用 `Student me;` 时，编译器将搜索全局标识符表，`Student` 未找到，则在类标识符内搜索。
-
-即表现为可以使用 `Student` 也可以使用 `struct Student`，如下：
+1. 如果在类标识符空间定义了 `struct Student {...};`，使用 `Student me;` 时，编译器将搜索全局标识符表，`Student` 未找到，则在类标识符内搜索。即表现为可以使用 `Student` 也可以使用 `struct Student`，如下：
 
 ```cpp
 // cpp
@@ -926,7 +955,7 @@ struct Student {
 void f( Student me );       // 正确，"struct" 关键字可省略
 ```
 
-二、若定义了与 `Student` 同名函数之后，则 `Student` 只代表函数，不代表结构体，如下：
+2. 若定义了与 `Student` 同名函数之后，则 `Student` 只代表函数，不代表结构体，如下：
 
 ```cpp
 typedef struct Student { 
@@ -948,7 +977,7 @@ int main() {
 
 #### C++ 中 struct 和 class
 
-总的来说，struct 更适合看成是一个数据结构的实现体，class 更适合看成是一个对象的实现体。
+struct 是一个数据结构的实现体，class 是一个对象的实现体。
 
 ##### struct 和 class的区别
 
@@ -1019,7 +1048,7 @@ int main() {
 
   ```c++
   extern Mutex m;
-  void f(){
+  void f() {
       int *p = new int;
       m.acquire();
       process(p);		// 抛出异常导致后续代码不能执行, 造成资源泄漏
@@ -1033,7 +1062,7 @@ int main() {
 * 重新抛出：
 
   ```c++
-  catch(iterrator_overflow &iof){
+  catch(iterrator_overflow &iof) {
       log_message(iof.what_happenned());
       throw; // 重新抛出异常
   }
@@ -1042,10 +1071,33 @@ int main() {
 * 捕获任何类型异常：
 
   ```c++
-  catch(.../*捕获任意异常*/){
+  catch(.../*捕获任意异常*/) {
       log_message("exception of unknown type");
       // 其他操作
   }
   ```
+
+---
+
+#### `noexcept` (C++11)
+
+1. 修饰符
+
+   ```cpp
+   voidFunc3() noexcept;
+   voidFunc4() noexcept(常量表达式);
+   ```
+
+   - `voidFunc3()`表示函数不会抛出异常，`noexcept`修饰的函数抛出了异常，编译器调用`std::terminate()`终止程序运行
+   - `voidFunc4()`常量表达式的结果为`true`，表示该函数不会抛出异常，反之（`false`）则有可能抛出异常
+
+2. 操作符（常用于模板）
+
+   ```cpp
+   template <typename T> void func5() noexcept(noexcept(T())) {}
+   ```
+
+   - `noexcept(T())` 是一个操作符，如果其参数是一个有可能抛出异常的表达式，`noexcept(T())` 则返回值为false，那么 func5 有可能会抛出异常；如果 `noexcept(T())` 返回 true，func5 不会抛出异常
+   - 函数模板是否会抛出异常，可由表达式进行推导，使得 C++11 更好支持泛型
 
 ---
